versioned_docs/version-2025.2.1/turma/ago/ago2024.mdx
---
slug: /turma/ago2024
---
import { Grid } from "@site/src/components/Grid";
import BrowserOnly from "@docusaurus/BrowserOnly";

export const data = {
  "title": "AGO2024",
  "base": "AGO",
  "weekClasses": [
    {
      "dayName": "Segunda-Feira",
      "dayClasses": [
        {
          "subject": "Matemática II - 622",
          "size": 2,
          "teachers": [
            "Elenice Josefa Kolancko Setti"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Produção Animal I - 628",
          "size": 2,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
        ,
        {
          "subject": "Produção Animal I - 628",
          "size": 1,
          "teachers": [
            "Leiliane Cristine de Souza"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
       ,
        {
          "subject": "Biologia II - 616",
          "size": 2,
          "teachers": [
            "Karina Dias Espartosa"
          ],
          "classroom": "laboratorio_de_biologia",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Língua Portuguesa e Literatura II - 2522",
          "size": 2,
          "teachers": [
            "Pedro Leites Junior"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Terça-Feira",
      "dayClasses": [
        {
          "subject": "Artes II - 614",
          "size": 2,
          "teachers": [
            "Josiane Paula Maltauro"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        },
        {
          "subject": "Geografia II - 623",
          "size": 2,
          "teachers": [
            "Jhones Donizetti Mendes",
            "Alexandre Roberto Valcarenghi"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
,
        {
          "subject": "História I - 626",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }

,
        {
          "subject": "Meteorologia e Bioclimatologia na Agropecuária - 631",
          "size": 2,
          "teachers": [
            "Octavio Henrique Viana",
            "Diego Armando Amaro da Silva"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        }

      ]
    },
    {
      "dayName": "Quarta-Feira",
      "dayClasses": [
        
        {
          "subject": "Sociologia Rural - 625",
          "size": 2,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        
        ,
        {
          "subject": "Culturas I - 627",
          "size": 3,
          "teachers": [
            "Fernanda da Silva Ferreira"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
      ]
    },
    {
      "dayName": "Quinta-Feira",
      "dayClasses": [
        {
          "subject": "Química II - 618",
          "size": 2,
          "teachers": [
            "Antonio Cesar Godoy"
          ],
          "classroom": "laboratorio_de_quimica",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
        ,
        {
          "subject": "Construções e Instalações Rurais - 630",
          "size": 2,
          "teachers": [
            "Elias Franco"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }
         ,
        {
          "subject": "Filosofia II - 624",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        }
        
      ]
    },
    {
      "dayName": "Sexta-Feira",
      "dayClasses": [
        {
          "subject": "Sistemas Agroflorestais - 629",
          "size": 2,
          "teachers": [
            "Elias Franco"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "07:30 - 08:20",
          "color": ""
        }
,
        {
          "subject": "História I - 626",
          "size": 1,
          "teachers": [
            "Suzane Conceição Pantolfi Tostes"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "09:25 - 10:15",
          "color": ""
        }

,
        {
          "subject": "Língua Portuguesa e Literatura II - 2522",
          "size": 1,
          "teachers": [
            "Michelli Cristina Galli"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "10:15 - 11:05",
          "color": ""
        },
        {
          "subject": "Filosofia II - 624",
          "size": 1,
          "teachers": [
            "José Provetti Júnior"
          ],
          "classroom": "sala_13-2",
          "students": [
            "AGO2024"
          ],
          "time": "11:05 - 11:55",
          "color": ""
        },
        {
          "subject": "Física II - 617",
          "size": 2,
          "teachers": [
            "Alex Soares de Brito"
          ],
          "classroom": "laboratorio_de_fisica",
          "students": [
            "AGO2024"
          ],
          "time": "13:10 - 14:00",
          "color": ""
        },
        {
          "subject": "Educação Física II - 615",
          "size": 2,
          "teachers": [
            "Tiago Amaral Silva"
          ],
          "classroom": "educacao_fisica_sala_1_b2",
          "students": [
            "AGO2024"
          ],
          "time": "15:05 - 15:55",
          "color": ""
        }
      ]
    }
  ],
  "time": [
    {
      "time": "07:30 - 08:20",
      "size": 50
    },
    {
      "time": "08:20 - 09:10",
      "size": 50
    },
    {
      "time": "09:25 - 10:15",
      "size": 50
    },
    {
      "time": "10:15 - 11:05",
      "size": 50
    },
    {
      "time": "11:05 - 11:55",
      "size": 50
    },
    {
      "time": "13:10 - 14:00",
      "size": 50
    },
    {
      "time": "14:00 - 14:50",
      "size": 50
    },
    {
      "time": "15:05 - 15:55",
      "size": 50
    },
    {
      "time": "15:55 - 16:45",
      "size": 50
    },
    {
      "time": "16:45 - 17:35",
      "size": 50
    },
    {
      "time": "19:00 - 19:50",
      "size": 50
    },
    {
      "time": "19:50 - 20:40",
      "size": 50
    },
    {
      "time": "21:00 - 21:50",
      "size": 50
    },
    {
      "time": "21:50 - 22:40",
      "size": 50
    }
  ]
}

# AGO2024

<div>
  {
    <BrowserOnly>
      {() => (
        <Grid
          title={data.title}
          weekClasses={data.weekClasses}
          time={data.time}
        />
      )}
    </BrowserOnly>
  }
</div>
